--- a/index.html
+++ b/index.html
@@ -167,11 +167,16 @@
           </div>
           <!-- right main content -->
           <div
-            class="border-2 text-white dark:border-zinc-600 border-zinc-300 rounded-xl flex-1 shadow-xl shadow-zinc-800 overflow-hidden"
+            class="border-2 text-white dark:border-zinc-600 border-zinc-300 rounded-xl flex-1 shadow-xl shadow-zinc-800 overflow-hidden items-center"
           >
-            <div class="content-wrapper px-5 md:px-5 py-5 flex flex-col gap-7">
+            <div
+              class="content-wrapper md:px-5 py-5 flex flex-col gap-7 iteams-center justify-center"
+            >
               <!-- about section -->
-              <section id="about" class="about flex flex-col gap-4 relative">
+              <section
+                id="about"
+                class="about px-2 flex flex-col gap-4 relative"
+              >
                 <h1
                   class="text-3xl text-center [filter:drop-shadow(0_5px_20px_currentColor)] z-30"
                 >
@@ -188,7 +193,7 @@
                 ></div>
 
                 <div
-                  class="about-description leading-[2] bg-zinc-600/20 border-2 border-zinc-500/10 rounded-md space-y-10 px-5 py-4 backdrop-blur-[25px]"
+                  class="about-description leading-[2] bg-zinc-600/20 border-2 border-zinc-500/10 rounded-md space-y-10 px-5 py-4 backdrop-blur-[25px] m-auto"
                 >
                   <div class="who-i-am w-full">
                     <h1
@@ -262,7 +267,10 @@
               </section>
 
               <!-- skills section -->
-              <section id="skills" class="skills flex flex-col gap-4 relative">
+              <section
+                id="skills"
+                class="skills px-2 flex flex-col gap-4 relative"
+              >
                 <h1
                   class="text-3xl text-center [filter:drop-shadow(0_5px_20px_currentColor)] z-30"
                 >
@@ -283,16 +291,16 @@
                 ></div>
 
                 <div
-                  class="skills-container leading-[2] p-3 bg-zinc-600/20 border-2 border-zinc-500/10 rounded-md space-y-10 px-5 py-4 backdrop-blur-[25px]"
+                  class="skills-container flex flex-col gap-5 bg-zinc-600/20 border-2 border-zinc-500/10 rounded-md px-5 py-4 backdrop-blur-[25px]"
                 >
                   <div class="frontend w-full">
                     <h1
-                      class="flex gap-2 items-center font-semibold text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
+                      class="flex gap-2 items-center font-semibold text-lg md:text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 640 640"
-                        class="w-8 fill-current"
+                        class="w-6 md:w-8 fill-current"
                       >
                         <path
                           d="M576 320C576 320.9 576 321.8 576 322.7C575.6 359.2 542.4 384 505.9 384L408 384C381.5 384 360 405.5 360 432C360 435.4 360.4 438.7 361 441.9C363.1 452.1 367.5 461.9 371.8 471.8C377.9 485.6 383.9 499.3 383.9 513.8C383.9 545.6 362.3 574.5 330.5 575.8C327 575.9 323.5 576 319.9 576C178.5 576 63.9 461.4 63.9 320C63.9 178.6 178.6 64 320 64C461.4 64 576 178.6 576 320zM192 352C192 334.3 177.7 320 160 320C142.3 320 128 334.3 128 352C128 369.7 142.3 384 160 384C177.7 384 192 369.7 192 352zM192 256C209.7 256 224 241.7 224 224C224 206.3 209.7 192 192 192C174.3 192 160 206.3 160 224C160 241.7 174.3 256 192 256zM352 160C352 142.3 337.7 128 320 128C302.3 128 288 142.3 288 160C288 177.7 302.3 192 320 192C337.7 192 352 177.7 352 160zM448 256C465.7 256 480 241.7 480 224C480 206.3 465.7 192 448 192C430.3 192 416 206.3 416 224C416 241.7 430.3 256 448 256z"
@@ -301,9 +309,9 @@
                       FrontEnd
                     </h1>
 
-                    <div class="description mt-3 flex gap-5">
+                    <div class="description mt-3 flex flex-wrap gap-5">
                       <div
-                        class="html w-12 h-12 bg-orange-600 rounded-xl text-orange-600 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="html w-10 h-10 md:w-12 md:h-12 bg-orange-600 rounded-xl text-orange-600 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -317,7 +325,7 @@
                       </div>
 
                       <div
-                        class="css w-12 h-12 bg-blue-600 rounded-xl text-blue-600 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="css w-10 h-10 md:w-12 md:h-12 bg-blue-600 rounded-xl text-blue-600 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -331,7 +339,7 @@
                       </div>
 
                       <div
-                        class="js w-12 h-12 bg-yellow-400 rounded-xl text-yellow-400 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="js w-10 h-10 md:w-12 md:h-12 bg-yellow-400 rounded-xl text-yellow-400 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -350,7 +358,7 @@
                       </div>
 
                       <div
-                        class="bootstrap w-12 h-12 bg-purple-600 rounded-xl text-purple-600 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="bootstrap w-10 h-10 md:w-12 md:h-12 bg-purple-600 rounded-xl text-purple-600 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -364,7 +372,7 @@
                       </div>
 
                       <div
-                        class="tailwindcss w-12 h-12 bg-zinc-600 rounded-xl text-zinc-600 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="tailwindcss w-10 h-10 md:w-12 md:h-12 bg-zinc-600 rounded-xl text-zinc-600 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -385,12 +393,12 @@
                   </div>
                   <div class="backend w-full">
                     <h1
-                      class="flex gap-2 items-center font-semibold text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
+                      class="flex gap-2 items-center font-semibold text-lg md:text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 640 640"
-                        class="w-8 fill-current"
+                        class="w-6 md:w-8 fill-current"
                       >
                         <path
                           d="M259.1 73.5C262.1 58.7 275.2 48 290.4 48L350.2 48C365.4 48 378.5 58.7 381.5 73.5L396 143.5C410.1 149.5 423.3 157.2 435.3 166.3L503.1 143.8C517.5 139 533.3 145 540.9 158.2L570.8 210C578.4 223.2 575.7 239.8 564.3 249.9L511 297.3C511.9 304.7 512.3 312.3 512.3 320C512.3 327.7 511.8 335.3 511 342.7L564.4 390.2C575.8 400.3 578.4 417 570.9 430.1L541 481.9C533.4 495 517.6 501.1 503.2 496.3L435.4 473.8C423.3 482.9 410.1 490.5 396.1 496.6L381.7 566.5C378.6 581.4 365.5 592 350.4 592L290.6 592C275.4 592 262.3 581.3 259.3 566.5L244.9 496.6C230.8 490.6 217.7 482.9 205.6 473.8L137.5 496.3C123.1 501.1 107.3 495.1 99.7 481.9L69.8 430.1C62.2 416.9 64.9 400.3 76.3 390.2L129.7 342.7C128.8 335.3 128.4 327.7 128.4 320C128.4 312.3 128.9 304.7 129.7 297.3L76.3 249.8C64.9 239.7 62.3 223 69.8 209.9L99.7 158.1C107.3 144.9 123.1 138.9 137.5 143.7L205.3 166.2C217.4 157.1 230.6 149.5 244.6 143.4L259.1 73.5zM320.3 400C364.5 399.8 400.2 363.9 400 319.7C399.8 275.5 363.9 239.8 319.7 240C275.5 240.2 239.8 276.1 240 320.3C240.2 364.5 276.1 400.2 320.3 400z"
@@ -398,9 +406,9 @@
                       </svg>
                       BackEnd
                     </h1>
-                    <div class="description mt-3 flex gap-5">
+                    <div class="description mt-3 flex flex-wrap gap-5">
                       <div
-                        class="nodejs w-12 h-12 bg-green-500 rounded-xl text-green-500 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="nodejs w-10 h-10 md:w-12 md:h-12 bg-green-500 rounded-xl text-green-500 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -413,7 +421,7 @@
                         </svg>
                       </div>
                       <div
-                        class="expressjs w-12 h-12 bg-zinc-700 rounded-xl text-zinc-500 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="expressjs w-10 h-10 md:w-12 md:h-12 bg-zinc-700 rounded-xl text-zinc-500 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -430,7 +438,7 @@
                         </svg>
                       </div>
                       <div
-                        class="restapi w-12 h-12 bg-purple-600 rounded-xl text-purple-600 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="restapi w-10 h-10 md:w-12 md:h-12 bg-purple-600 rounded-xl text-purple-600 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -443,7 +451,7 @@
                         </svg>
                       </div>
                       <div
-                        class="restapi w-12 h-12 bg-cyan-500 rounded-xl text-cyan-500 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="restapi w-10 h-10 md:w-12 md:h-12 bg-cyan-500 rounded-xl text-cyan-500 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -462,14 +470,14 @@
                       </div>
                     </div>
                   </div>
-                  <div class="database">
+                  <div class="database w-full">
                     <h1
-                      class="flex gap-2 items-center font-semibold text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
+                      class="flex gap-2 items-center font-semibold text-lg md:text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 640 640"
-                        class="w-8 fill-current"
+                        class="w-6 md:w-8 fill-current"
                       >
                         <path
                           d="M544 269.8C529.2 279.6 512.2 287.5 494.5 293.8C447.5 310.6 385.8 320 320 320C254.2 320 192.4 310.5 145.5 293.8C127.9 287.5 110.8 279.6 96 269.8L96 352C96 396.2 196.3 432 320 432C443.7 432 544 396.2 544 352L544 269.8zM544 192L544 144C544 99.8 443.7 64 320 64C196.3 64 96 99.8 96 144L96 192C96 236.2 196.3 272 320 272C443.7 272 544 236.2 544 192zM494.5 453.8C447.6 470.5 385.9 480 320 480C254.1 480 192.4 470.5 145.5 453.8C127.9 447.5 110.8 439.6 96 429.8L96 496C96 540.2 196.3 576 320 576C443.7 576 544 540.2 544 496L544 429.8C529.2 439.6 512.2 447.5 494.5 453.8z"
@@ -478,9 +486,9 @@
                       DataBase
                     </h1>
 
-                    <div class="description mt-3 flex gap-5">
+                    <div class="description mt-3 flex flex-wrap gap-5">
                       <div
-                        class="mongodb w-12 h-12 bg-green-700 rounded-xl text-green-700 [filter:drop-shadow(0_0_5px_currentColor)] pt-2"
+                        class="mongodb w-10 h-10 md:w-12 md:h-12 bg-green-700 rounded-xl text-green-700 [filter:drop-shadow(0_0_5px_currentColor)] pt-2"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -493,7 +501,7 @@
                         </svg>
                       </div>
                       <div
-                        class="mysql w-12 h-12 bg-gray-900 rounded-xl text-gray-900 [filter:drop-shadow(0_0_5px_currentColor)] p-1"
+                        class="mysql w-10 h-10 md:w-12 md:h-12 bg-gray-900 rounded-xl text-gray-900 [filter:drop-shadow(0_0_5px_currentColor)] p-1"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -548,9 +556,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="programming-languages">
+                  <div class="programming-languages w-full">
                     <h1
-                      class="flex gap-2 items-center font-semibold text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
+                      class="flex gap-2 items-center font-semibold text-lg md:text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -563,9 +571,9 @@
                       </svg>
                       Programming Languages
                     </h1>
-                    <div class="description mt-3 flex gap-5">
+                    <div class="description mt-3 flex flex-wrap gap-5">
                       <div
-                        class="c-lang w-12 h-12 bg-blue-700 rounded-xl text-blue-700 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="c-lang w-10 h-10 md:w-12 md:h-12 bg-blue-700 rounded-xl text-blue-700 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -578,7 +586,7 @@
                         </svg>
                       </div>
                       <div
-                        class="js w-12 h-12 bg-yellow-400 rounded-xl text-yellow-400 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="js w-10 h-10 md:w-12 md:h-12 bg-yellow-400 rounded-xl text-yellow-400 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -596,7 +604,7 @@
                         </svg>
                       </div>
                       <div
-                        class="python w-12 h-12 bg-gray-800 rounded-xl text-gray-800 [filter:drop-shadow(0_0_5px_currentColor)] p-1"
+                        class="python w-10 h-10 md:w-12 md:h-12 bg-gray-800 rounded-xl text-gray-800 [filter:drop-shadow(0_0_5px_currentColor)] p-1"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -619,14 +627,14 @@
                       </div>
                     </div>
                   </div>
-                  <div class="tools-devops">
+                  <div class="tools-devops w-full">
                     <h1
-                      class="flex gap-2 items-center font-semibold text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
+                      class="flex gap-2 items-center font-semibold text-lg md:text-xl text-amber-500 [filter:drop-shadow(0_0_20px_currentColor)]"
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 640 640"
-                        class="w-8 fill-current"
+                        class="w-6 md:w-8 fill-current"
                       >
                         <path
                           d="M102.8 57.3C108.2 51.9 116.6 51.1 123 55.3L241.9 134.5C250.8 140.4 256.1 150.4 256.1 161.1L256.1 210.7L346.9 301.5C380.2 286.5 420.8 292.6 448.1 320L574.2 446.1C592.9 464.8 592.9 495.2 574.2 514L514.1 574.1C495.4 592.8 465 592.8 446.2 574.1L320.1 448C292.7 420.6 286.6 380.1 301.6 346.8L210.8 256L161.2 256C150.5 256 140.5 250.7 134.6 241.8L55.4 122.9C51.2 116.6 52 108.1 57.4 102.7L102.8 57.3zM247.8 360.8C241.5 397.7 250.1 436.7 274 468L179.1 563C151 591.1 105.4 591.1 77.3 563C49.2 534.9 49.2 489.3 77.3 461.2L212.7 325.7L247.9 360.8zM416.1 64C436.2 64 455.5 67.7 473.2 74.5C483.2 78.3 485 91 477.5 98.6L420.8 155.3C417.8 158.3 416.1 162.4 416.1 166.6L416.1 208C416.1 216.8 423.3 224 432.1 224L473.5 224C477.7 224 481.8 222.3 484.8 219.3L541.5 162.6C549.1 155.1 561.8 156.9 565.6 166.9C572.4 184.6 576.1 203.9 576.1 224C576.1 267.2 558.9 306.3 531.1 335.1L482 286C448.9 253 403.5 240.3 360.9 247.6L304.1 190.8L304.1 161.1L303.9 156.1C303.1 143.7 299.5 131.8 293.4 121.2C322.8 86.2 366.8 64 416.1 63.9z"
@@ -634,9 +642,9 @@
                       </svg>
                       Tools & DevOps
                     </h1>
-                    <div class="description mt-3 flex gap-5">
+                    <div class="description mt-3 flex flex-wrap gap-5">
                       <div
-                        class="git w-12 h-12 bg-orange-600 rounded-xl text-orange-600 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="git w-10 h-10 md:w-12 md:h-12 bg-orange-600 rounded-xl text-orange-600 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -649,7 +657,7 @@
                         </svg>
                       </div>
                       <div
-                        class="github w-12 h-12 bg-zinc-700 rounded-xl text-zinc-700 [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="github w-10 h-10 md:w-12 md:h-12 bg-zinc-700 rounded-xl text-zinc-700 [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -662,7 +670,7 @@
                         </svg>
                       </div>
                       <div
-                        class="postman w-12 h-12 bg-[#ed6d3f] rounded-xl text-[#ed6d3f] [filter:drop-shadow(0_0_5px_currentColor)]"
+                        class="postman w-10 h-10 md:w-12 md:h-12 bg-[#ed6d3f] rounded-xl text-[#ed6d3f] [filter:drop-shadow(0_0_5px_currentColor)]"
                       >
                         <svg
                           id="Layer_1"
@@ -680,7 +688,7 @@
                         </svg>
                       </div>
                       <div
-                        class="docker w-12 h-12 bg-cyan-600 rounded-xl text-cyan-600 [filter:drop-shadow(0_0_5px_currentColor)] p-1"
+                        class="docker w-10 h-10 md:w-12 md:h-12 bg-cyan-600 rounded-xl text-cyan-600 [filter:drop-shadow(0_0_5px_currentColor)] p-1"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -693,7 +701,7 @@
                         </svg>
                       </div>
                       <div
-                        class="ardunio w-12 h-12 bg-teal-600 rounded-xl text-teal-600 [filter:drop-shadow(0_0_5px_currentColor)] p-1"
+                        class="ardunio w-10 h-10 md:w-12 md:h-12 bg-teal-600 rounded-xl text-teal-600 [filter:drop-shadow(0_0_5px_currentColor)] p-1"
                       >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
